# dsh-example-queries

./: .gitignore  BenchDSH.hs  BenchSQL.hs  BenchShredding.hs  BenchTPCH.hs  LICENSE  Tests.hs  dsh-example-queries.cabal  dsh-tpc-h.cabal  mksandbox.sh  plans.sh
Queries/: AQuery.hs  SIGMOD.hs  TPCH.hs
Queries/AQuery/: Packets.hs  Trades.hs
Queries/SIGMOD/: Layered.hs  Nested.hs  Order.hs  Simple.hs
Queries/Shredding/: BuildingBlocks.hs  Paper.hs
Queries/Simple/: Index.hs
Queries/TPCH/: BuildingBlocks.hs  NonStandard.hs  Q10.hs  Q11.hs  Q13.hs  Q14.hs  Q15.hs  Q16.hs  Q17.hs  Q18.hs  Q19.hs  Q2.hs  Q20.hs  Q21.hs  Q22.hs  Q3.hs  Q4.hs  Q6.hs  Q7.hs  Q8.hs  Q9.hs  Standard.hs
Queries/TPCH/NonStandard/: Flat.hs  Nested.hs  TopK.hs  custfromorders.sql  custrevenues.sql  expectedrevenuefor.sql  regionstopcustomers.sql  shippingdelay.sql  shippingdelayinterval.sql  toporderspercust.sql
Queries/TPCH/Standard/: Q1.hs  Q10.hs  Q11.hs  Q12.hs  Q13.hs  Q2.hs  (+16 more)
Schema/: AQuery.hs  Shredding.hs  TPCH.hs
aquery/: FlowGen.hs  TradeGen.hs  dsh-aquery.cabal  load_flows_pg.sh  load_trades_pg.sh  mksandbox.sh
aquery/Queries/: AQuery.hs
aquery/sql/: bestprofit_native.sql  bestprofit_reasonable.sql  bestprofit_selfjoin.sql
bench/: BenchDSH.hs  BenchNested.hs  BenchSQL.hs  BenchTPCH.hs  DSHSql.hs
data_generators/: FlowGen.hs  OrganisationGen.hs  TradeGen.hs
dbpl11-example/: aggrerror.hs  generate_players.py  listcombinators.hs  load_pg.py  maxeff.hs  variants.hs
dft/: .gitignore  dft.hs  dsh-dft.cabal  loadvec.sh  run.sh
dft/competition/: DftNative.hs
dft/src/: DFT.hs
dft/support/: Indexes.hs  loadidx.sh
dsh-examples/: dsh-ifl-facilities.hs  dsh-wadler.hs
hiperfit/dsh-trading/: dsh-trading.cabal
hiperfit/dsh-trading/FactorBacktest/: FactorBacktestOrder.hs  FactorBacktestSparse.hs  loaddata.sh
native_queries/nested_native/: native_nested_cheapersuppliesinregionavglateral.sql  native_nested_cheapersuppliesinregionlateral.sql  native_nested_custfromorders.sql  native_nested_custrevenues_deep.sql  native_nested_custrevenues_flat.sql  native_nested_expectedrevenuefor_lateral.sql  native_nested_expectedrevenuefor_nolat.sql  native_nested_regionstopcustomers_lateral.sql  native_nested_regionstopcustomers_outer.sql  native_nested_regionstopcustomers_union.sql  native_nested_shippingdelay.sql  native_nested_shippingdelayinterval.sql  native_nested_toporderspercust_lateral.sql  native_nested_toporderspercust_nolat.sql  native_nested_unshippeditemspercustomerlateral.sql
native_queries/tpch_native/: q1.sql  q10.sql  q12.sql  q14.sql  q15.sql  q17.sql  q22.sql  q6.sql  q7.sql
scripts/bench/: numbers.py  populate_nested_native_dirs.sh  populate_shredding_native_dirs.sh  populate_tpch_native_dirs.sh  runall.sh
scripts/db2/: load_tpch.sh  runstats.sh
scripts/pg/: additional_indexes.sql  load.sh
scripts/shredding/: load_shredding.sh  schema_shredding.sql
shredding-benchmarks/: dsh-shredding-benchmarks.cabal  plans.sh
shredding-benchmarks/Queries/: Shredding.hs
shredding-benchmarks/Queries/Shredding/: Complex.hs  Grouping.hs  Nested.hs
shredding-benchmarks/Schema/: Shredding.hs
shredding-benchmarks/organization/: Records.hs  bench.sh  organisation-complex.hs  organisation-groupby.hs  organisation-nested.hs  results-organisation-nested-200913.ods  setup.sh
shredding-benchmarks/organization/data/: organisation128.sql.bz2  organisation16.sql.bz2  organisation256.sql.bz2.REMOVED.git-id  organisation32.sql.bz2  organisation64.sql.bz2  schema.sql.bz2  setup.sql
shredding-benchmarks/organization/q1/: .bench.sh.swp  q11sh.sql  q12sh.sql  q13.sql  q13sh.sql  q14.sql  q14sh.sql  res
shredding-benchmarks/organization/q2/: q2.sql  q2aj.sql  q2ferry.sql  q2ferrynorm.sql  q2sh.sql  res
shredding-benchmarks/organization/q3/: q31.sql  q31sh.sql  q32.sql  q32sh.sql  res
shredding-benchmarks/organization/q4/: q41.sql  q41sh.sql  q42.sql  q42sh.sql  res
shredding-benchmarks/organization/q5/: q51.sql  q51sh.sql  q52.sql  q52_.sql  q52sh.sql  res
shredding-benchmarks/organization/q6/: q61sh.sql  q62.sql  q62ferry.sql  q62sh.sql  q63.sql  q63ferry.sql  q63sh.sql  res
simple-comprehensions/cartprod/: prod.hs  prod3.hs
simple-comprehensions/eqjoin/: eqjoin_flat.hs  join.hs  join2.hs  join3.hs  join3_2.hs  join3_3.hs  join4.hs  join5.hs  joinfilter.hs  joinfilter2.hs  joinproj.hs
simple-comprehensions/nested-head/: foo.hs  nestedguard.hs  nestedhead-simple1.hs  nestedhead-simple2.hs  nestedhead-simple3.hs  nestedhead-simple4.hs  nestedhead.hs
simple-comprehensions/norm/: norm1_1.hs  norm2_1.hs  norm2_2.hs  norm2_3.hs  norm3_1.hs
simple-comprehensions/quantification/: .existential_not_null.hs.swp  .universal_null.hs.swp  existential_elem.hs  existential_elem2.hs  existential_not_null.hs  universal_null.hs
simple-comprehensions/single-generator/: conjunctive-pred.hs  filter.hs  filterlet.hs  let.hs
simple-queries/: simple-tpch-queries.REMOVED.git-id  simple-tpch-queries.hs
soccer/: soccer.hs
tpc-h/: BenchTPCH.hs  Records.hs  create_indexes.sql  dsh-tpc-h.cabal  dshifiy-tpch.sql  mksandbox.sh  plans.sh
tpc-h-other/: dsh-tpc-h-other.cabal  mksandbox.sh
tpc-h-other/Queries/: TPCHOther.hs
tpc-h/Queries/: TPCH.hs
tpc-h/Queries/TPCH/: BuildingBlocks.hs  Common.hs  Q1.hs  Q10.hs  Q11.hs  Q12.hs  Q13.hs  Q14.hs  Q15.hs  Q16.hs  Q17.hs  Q18.hs  Q19.hs  Q2.hs  Q20.hs  Q21.hs  Q22.hs  Q3.hs  Q4.hs  Q5.hs  Q6.hs  Q7.hs  Q8.hs  Q9.hs  Records.hs
tpc-h/Schema/: TPCH.hs
tpc-h/q1/: Q1.hs  Records.hs
tpc-h/q10/: Q10.hs
tpc-h/q11/: Q11.hs
tpc-h/q16/: Q16.hs
tpc-h/q17/: Q17.REMOVED.git-id  Q17.hs
tpc-h/q18/: Q18.hs
tpc-h/q19/: Q19.hs
tpc-h/q2/: Q2.hs  Records.hs
tpc-h/q20/: Q20.hs
tpc-h/q21/: Q21.hs  Records.hs
tpc-h/q3/: Q3.hs
tpc-h/q4/: Q4.hs
tpc-h/q5/: Q5.hs
tpc-h/q6/: Q6.hs
tpc-h/q7/: Q7.hs  Records.hs
tpc-h/q8/: Q8.hs
tpc-h/q9/: Q9.hs
tpc-h/scripts/pg/: add_constraints.sql
tpc-h/tpch_native/: q13.sql  q2.sql  q4.sql  q5.sql
tpch_native/: q10.sql  q11.sql  q16.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q3.sql  q8.sql
(+65 files in other folders)
