name:                dsh-example-queries
version:             0.1.0.0
synopsis:            A collection of database query examples using Database-Supported Haskell (DSH)
homepage:            http://db.inf.uni-tuebingen.de/projects/DatabaseSupportedHaskell.html
license:             BSD3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alex@etc-network.de
category:            Database
build-type:          Simple
cabal-version:       >=1.10
description:
  This package provides a collection of nested and flat database queries formulated using
  Database-Supported Haskell (DSH).
  .
  Examples include:

  * All 22 standard benchmark queries from the TPC-H decision support benchmark
  * Nested and other non-standard queries over the TPC-H schema
  * Example queries from the /AQuery/ paper by Lerner and Shasha (Proc. VLDB 1999)
  * Benchmark queries from the /Query Shredding/ paper by Lindley et al. (Proc. SIGMOD 2014)

library
  exposed-modules:     Queries.TPCH.Standard
                       Queries.TPCH.NonStandard
                       Queries.TPCH.BuildingBlocks
                       Queries.AQuery
                       Queries.Shredding.Paper

                       Schema.TPCH
                       Schema.Shredding
                       Schema.AQuery

  other-modules:       Queries.TPCH.Standard.Q1,
                       Queries.TPCH.Standard.Q2,
                       Queries.TPCH.Standard.Q3,
                       Queries.TPCH.Standard.Q4,
                       Queries.TPCH.Standard.Q5,
                       Queries.TPCH.Standard.Q6,
                       Queries.TPCH.Standard.Q7,
                       Queries.TPCH.Standard.Q8,
                       Queries.TPCH.Standard.Q9,
                       Queries.TPCH.Standard.Q10,
                       Queries.TPCH.Standard.Q11,
                       Queries.TPCH.Standard.Q12,
                       Queries.TPCH.Standard.Q13,
                       Queries.TPCH.Standard.Q14,
                       Queries.TPCH.Standard.Q15,
                       Queries.TPCH.Standard.Q16,
                       Queries.TPCH.Standard.Q17,
                       Queries.TPCH.Standard.Q18,
                       Queries.TPCH.Standard.Q19,
                       Queries.TPCH.Standard.Q20,
                       Queries.TPCH.Standard.Q21,
                       Queries.TPCH.Standard.Q22

                       Queries.Shredding.BuildingBlocks

                       Queries.AQuery.Trades
                       Queries.AQuery.Packets

  other-extensions:    TemplateHaskell
  build-depends:       base,
                       DSH >=0.12.1,
                       dsh-sql >= 0.2,
                       HDBC-odbc,
                       text,
                       time >= 1.4,
                       Decimal >= 0.4,
                       semigroups
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2 -fprof-auto -auto-all

executable Tests
  default-language: Haskell2010
  main-is: Tests.hs
  ghc-options: -O2 -fprof-auto
  build-depends: base >= 4.8,
                 HDBC,
                 HDBC-odbc,
                 dsh-example-queries >= 0.1,
                 DSH >= 0.12.1,
                 dsh-sql >= 0.2,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 deepseq,
                 semigroups

executable gen-organisation
  default-language: Haskell2010
  main-is: data_generators/OrganisationGen.hs
  ghc-options: -Wall -O2
  build-depends: base >= 4.8, text, containers, mwc-random, vector, cassava, bytestring, mtl

executable gen-flows
  default-language:    Haskell2010
  main-is:             data_generators/FlowGen.hs
  build-depends:       base, containers, mwc-random, vector, cassava, bytestring
  ghc-options:         -Wall -O2

executable gen-trades
  default-language:    Haskell2010
  main-is:             data_generators/TradeGen.hs
  build-depends:       base, containers, mwc-random, vector, cassava, bytestring
  ghc-options:         -Wall -O2

executable bench-sql
  default-language: Haskell2010
  main-is: bench/BenchSQL.hs
  build-depends: base >= 4.8,
                 criterion >= 1.1,
                 HDBC,
                 HDBC-odbc,
                 DSH >=0.12.1,
                 dsh-sql >= 0.2,
                 dsh-example-queries >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups

executable bench-dsh
  default-language: Haskell2010
  main-is: bench/BenchDSH.hs
  build-depends: base >= 4.8,
                 criterion >= 1.1,
                 HDBC,
                 HDBC-odbc,
                 DSH >=0.12.1,
                 dsh-sql >= 0.2,
                 dsh-example-queries >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups,
                 convertible >= 1.1,
                 deepseq >= 1.4,
                 bytestring >= 0.10

executable bench-shredding
  default-language: Haskell2010
  main-is: bench/BenchShredding.hs
  build-depends: base >= 4.8,
                 criterion >= 1.1,
                 HDBC,
                 HDBC-odbc,
                 DSH >=0.12.1,
                 dsh-sql >= 0.2,
                 dsh-example-queries >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups,
                 convertible >= 1.1,
                 deepseq >= 1.4,
                 bytestring >= 0.10
  ghc-options:   -Wall -fno-warn-orphans -O2 -fprof-auto -auto-all

executable bench-nested
  default-language: Haskell2010
  main-is: bench/BenchNested.hs
  build-depends: base >= 4.8,
                 criterion >= 1.1,
                 HDBC,
                 HDBC-odbc,
                 DSH >=0.12.1,
                 dsh-sql >= 0.2,
                 dsh-example-queries >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups,
                 convertible >= 1.1,
                 deepseq >= 1.4,
                 bytestring >= 0.10,
                 postgresql-simple >= 0.4,
                 vector >= 0.10,
                 aeson >=0.9,
                 scientific >= 0.3,
                 attoparsec >= 0.13
  ghc-options:   -Wall -fno-warn-orphans -O2 -fprof-auto -auto-all

executable dsh2sql
  default-language: Haskell2010
  main-is: bench/DSHSql.hs
  build-depends: base >= 4.8,
                 criterion >= 1.1,
                 DSH >=0.12.1,
                 dsh-sql >= 0.2,
                 dsh-example-queries >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups,
                 convertible >= 1.1,
                 deepseq >= 1.4,
                 bytestring >= 0.10,
                 postgresql-simple >= 0.4,
                 vector >= 0.10,
                 aeson >=0.9,
                 scientific >= 0.3,
                 attoparsec >= 0.13,
                 directory >=1.2,
                 filepath >=1.4
  ghc-options:   -Wall -fno-warn-orphans -O2 -fprof-auto -auto-all

source-repository head
    type:     git
    location: https://github.com/ulricha/dsh-example-queries
