name:                dsh-shredding-benchmarks
version:             0.1.0.0
synopsis:            Benchmark queries from the 'Query Shredding' paper by Cheney et al.
homepage:            http://db.inf.uni-tuebingen.de/projects/DatabaseSupportedHaskell.html
license:             BSD3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alex@etc-network.de
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Queries.Shredding,
                       Schema.Shredding
  other-modules:       Queries.Shredding.Nested,
                       Queries.Shredding.Complex,
                       Queries.Shredding.Grouping
  other-extensions:    TemplateHaskell
  build-depends:       base,
                       DSH >=0.10,
                       dsh-sql >= 0.1,
                       HDBC-postgresql,
                       text,
                       time >= 1.4,
                       Decimal >= 0.4
  -- hs-source-dirs:
  default-language:    Haskell2010
