name:                dsh-tpc-h
version:             0.1.0.0
synopsis:            All 22 queries from the TPC-H benchmark implemented in DSH.
homepage:            http://db.inf.uni-tuebingen.de/projects/DatabaseSupportedHaskell.html
license:             BSD3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alex@etc-network.de
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Queries.TPCH,
                       Schema.TPCH
  other-modules:       Queries.TPCH.Q1,
                       Queries.TPCH.Q2,
                       Queries.TPCH.Q3,
                       Queries.TPCH.Q4,
                       Queries.TPCH.Q5,
                       Queries.TPCH.Q6,
                       Queries.TPCH.Q7,
                       Queries.TPCH.Q8,
                       Queries.TPCH.Q9,
                       Queries.TPCH.Q10,
                       Queries.TPCH.Q11,
                       Queries.TPCH.Q12,
                       Queries.TPCH.Q13,
                       Queries.TPCH.Q14,
                       Queries.TPCH.Q15,
                       Queries.TPCH.Q16,
                       Queries.TPCH.Q17,
                       Queries.TPCH.Q19,
                       Queries.TPCH.Q20,
                       Queries.TPCH.Q21,
                       Queries.TPCH.Q22,
                       Queries.TPCH.Common
  other-extensions:    TemplateHaskell
  build-depends:       base,
                       DSH >=0.10,
                       dsh-sql >= 0.1,
                       HDBC-postgresql,
                       text,
                       time >= 1.4,
                       Decimal >= 0.4
  -- hs-source-dirs:
  default-language:    Haskell2010
