name:                dsh-tpc-h
version:             0.1.0.0
synopsis:            All 22 queries from the TPC-H benchmark implemented in DSH.
homepage:            http://db.inf.uni-tuebingen.de/projects/DatabaseSupportedHaskell.html
license:             BSD3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alex@etc-network.de
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Queries.TPCH,
                       Queries.TPCH.BuildingBlocks
                       Schema.TPCH
  other-modules:       Queries.TPCH.Q1,
                       Queries.TPCH.Q2,
                       Queries.TPCH.Q3,
                       Queries.TPCH.Q4,
                       Queries.TPCH.Q5,
                       Queries.TPCH.Q6,
                       Queries.TPCH.Q7,
                       Queries.TPCH.Q8,
                       Queries.TPCH.Q9,
                       Queries.TPCH.Q10,
                       Queries.TPCH.Q11,
                       Queries.TPCH.Q12,
                       Queries.TPCH.Q13,
                       Queries.TPCH.Q14,
                       Queries.TPCH.Q15,
                       Queries.TPCH.Q16,
                       Queries.TPCH.Q17,
                       Queries.TPCH.Q18,
                       Queries.TPCH.Q19,
                       Queries.TPCH.Q20,
                       Queries.TPCH.Q21,
                       Queries.TPCH.Q22
  other-extensions:    TemplateHaskell
  build-depends:       base,
                       DSH >=0.10,
                       dsh-sql >= 0.1,
                       HDBC-odbc,
                       text,
                       time >= 1.4,
                       Decimal >= 0.4,
                       semigroups
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2 -fprof-auto

executable Tests
  default-language: Haskell2010
  main-is: Tests.hs
  ghc-options: -O2 -fprof-auto
  build-depends: base >= 4.8,
                 HDBC,
                 HDBC-odbc,
                 dsh-tpc-h >= 0.1,
                 DSH,
                 dsh-sql >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups

benchmark bench-tpch
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: BenchTPCH.hs
  build-depends: base >= 4.8,
                 criterion >= 1.1,
                 HDBC,
                 HDBC-odbc,
                 DSH >=0.10,
                 dsh-sql >= 0.1,
                 dsh-tpc-h >= 0.1,
                 text,
                 time >= 1.4,
                 Decimal >= 0.4,
                 semigroups