name:                dsh-trading
version:             0.1.0.0
synopsis:            DSH implementation of quantitative trading strategies
-- description:         
homepage:            http://db.inf.uni-tuebingen.de/projects/DatabaseSupportedHaskell.html
license:             BSD3
license-file:        LICENSE
author:              Alexander Ulrich
maintainer:          alexander.ulrich@uni-tuebingen.de
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable backtest-sparse
  main-is:             FactorBacktest/FactorBacktestSparse.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances, GADTs, MonadComprehensions, MultiParamTypeClasses, OverloadedStrings, RebindableSyntax, TemplateHaskell, TypeFamilies, UndecidableInstances, ViewPatterns
  build-depends:       base >=4.7 && <4.8, 
                       primitive >=0.5 && <0.6, 
                       text >=1.1 && <1.2, 
                       DSH >=0.9 && <0.10, 
                       X100Client >=0.0 && <0.1, 
                       HDBC-postgresql >=2.3 && <2.4
  default-language:    Haskell2010

executable backtest-order
  main-is:             FactorBacktest/FactorBacktestOrder.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances, GADTs, MonadComprehensions, MultiParamTypeClasses, OverloadedStrings, RebindableSyntax, TemplateHaskell, TypeFamilies, UndecidableInstances, ViewPatterns
  build-depends:       base >=4.7 && <4.8, 
                       primitive >=0.5 && <0.6, 
                       text >=1.1 && <1.2, 
                       DSH >=0.9 && <0.10, 
                       X100Client >=0.0 && <0.1, 
                       HDBC-postgresql >=2.3 && <2.4
  default-language:    Haskell2010

executable gen
  main-is:             FactorBacktest/Gen.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances, GADTs, MonadComprehensions, MultiParamTypeClasses, OverloadedStrings, RebindableSyntax, TemplateHaskell, TypeFamilies, UndecidableInstances, ViewPatterns
  build-depends:       base >=4.7 && <4.8, 
                       primitive >=0.5 && <0.6, 
                       double-conversion >=0.2 && <0.3, 
                       text >=1.1 && <1.2, 
                       vector >=0.10 && <0.11, 
                       mwc-random >=0.13 && <0.14
  default-language:    Haskell2010